--- a/13516126/16518088 - 16518238 - 16518269 - 16518338 - 16518354.md
+++ b/13516126/16518088 - 16518238 - 16518269 - 16518338 - 16518354.md
@@ -9,3 +9,8 @@ Halo, perkenalkan kami
 
 pada hari Kamis, 22 Agustus 2019, kami mewawancarai kak Iqrar Aminullah alias Iqwaw di selasar Dingdong Labtek V. Beliau dari jurusan Teknik Informatika dan saat ini sedang menjabat sebagai Koordinator Tim Senator. Alasan kak Iqrar ingin menjadi bagian dari  kesenatoran adalah karena ia ingin mencoba hal-hal yang baru. Tugasnya cukup simpel, ia dengan tim senatornya akan membahas tentang KM dan lembaga-lembaga eksekutifnya setiap dua minggu sekali. Dulu, ia juga pernah menjadi panitia Arkavidia 2017 sebagai panitia lomba Capture The Flag, dengan alasan agar siapa tahu dapat belajar tentang CTF, walaupun ternyata tidak ada yang ia pelajari. Ia juga pernah menjadi panitia Entrepreneurship karena diajak temannya yang saat itu menjabat sebagai kadiv Entre.
 
+#Rencana Setelah Lulus
+Rencana kak Iqrar setelah lulus adalah langsung kerja untuk menambah pengalaman dan beradaptasi terhadap lingkungan kerja. Kak Iqrar juga ingin menambah pengetahuan di dunia kerja dan membantu orang tua dengan cara mencari nafkah sendiri, kak Iqrar juga kalau diberi kesempatan ingin mengikuti kuliah sampai S3.
+
+#Lebih pilih mana, intern atau student exchange?
+Kak Iqrar lebih pilih student exchange karena kalau student exchange bisa mengetahui dan mengenal mahasiswa luar negeri (kalau ke luar negeri) dan mengetahui negara lain (bisa beradaptasi). Kalau intern nanti juga bakal disuruh gitu pas sebelum kerja, misalnya Google yang mengharuskan karyawannya untuk intern sebelum bekerja di sana selama beberapa bulan agar mengetahui cocok atau tidaknya karyawannya di dunia kerja. Student exchange bagus, kalau S2 atau S3 jadi dapat relasi dengan profesor atau dosen di sana sehingga lebih dimudahkan peluang akademiknya.
