--- a/13516012/16518206 - 16518229 - 16518255 - 16518302 - 16518350.md
+++ b/13516012/16518206 - 16518229 - 16518255 - 16518302 - 16518350.md
@@ -12,11 +12,13 @@ Pewawancara:
 
 ## Deskripsi
 
-Pada hari Rabu, 21 Agustus 2019, pukul 12.00 siang, kami berlima mendapat kesempatan mewawancarai kak Wildan Dicky Alnatara, atau yang biasa akrab dipanggil dengan sebutan Wildan. Peran Kak Wildan di Departemen Eksekutif adalah menjadi ketua Departemen Inkubator IT HMIF. Kak Wildan dari Jurusan Teknik Informatika angkatan 2016. Sebelumnya di project management diminta buat pegang jabatan sebagai ketua departemen, Kak Wildan berkata bahwa jabatan tersebut lumayan untuk dijadikan bahan di CV, maka dari itu ia mau. Alasan Kak Wildan menjadi project manager adalah karena Kak Wildan ingin belajar mengekstrak apa yang diinginkan oleh klien.
-Peran Kak Wildan di Arkavidia adalah menjadi anggota di divisi expo, di sana ia berkesempatan untuk mengontak perusahaan-perusahaan start up, mengetahui bagaimana sistem exponya (seperti reward,dll.). Sedangkan waktu Arkavidia tahun pertamanya, tugas Kak Wildan adalah untuk mengontak tenant-tenant makanan dan membuat sistem rewarding. Alasan Kak Wildan ikut kepanitiaan di Arkavidia adalah pertama kali karena teman-temannya banyak yang di divisi tersebut dan juga ingin mengenal banyak perusahaan start up untuk bahan "mencontek" produk mereka. Untuk Arkavidia yang kedua, karena Kak Wildan dikontak kadivnya untuk diminta masuk ke divisi tersebut (closerec).
-Proker yang pernah dilaksanakan oleh Kak Wildan antara lain adalah pernah supervise langsung kegiatan IT Day. IT Day adalah seminar yang diadakan bagi orang-orang yang tertarik untuk memasuki bidang IT. Tetapi, tidak menutup kemungkinan untuk orang lain untuk mengikutinya.
+    Pada hari Rabu, 21 Agustus 2019, pukul 12.00 siang, kami berlima mendapat kesempatan mewawancarai kak Wildan Dicky Alnatara, atau yang biasa akrab dipanggil dengan sebutan Wildan. Peran Kak Wildan di Departemen Eksekutif adalah menjadi CEO Inkubator IT HMIF. Kak Wildan dari Jurusan Teknik Informatika angkatan 2016. Sebelumnya di Project Management diminta buat pegang jabatan sebagai ketua departemen, Kak Wildan berkata bahwa jabatan tersebut lumayan untuk dijadikan bahan di CV, maka dari itu ia mau. Alasan Kak Wildan menjadi project manager adalah karena Kak Wildan ingin belajar mengekstrak apa yang diinginkan oleh klien.
+    Peran Kak Wildan di Arkavidia adalah menjadi anggota di divisi expo, di sana ia berkesempatan untuk mengontak perusahaan-perusahaan start up, mengetahui bagaimana sistem exponya (seperti reward,dll.). Sedangkan waktu Arkavidia tahun pertamanya, tugas Kak Wildan adalah untuk mengontak tenant-tenant makanan dan membuat sistem rewarding. Alasan Kak Wildan ikut kepanitiaan di Arkavidia adalah pertama kali karena teman-temannya banyak yang di divisi tersebut dan juga ingin mengenal banyak perusahaan start up untuk bahan "mencontek" produk mereka. Untuk Arkavidia yang kedua, karena Kak Wildan dikontak kadivnya untuk diminta masuk ke divisi tersebut (closerec).
+    Proker yang pernah dilaksanakan oleh Kak Wildan antara lain adalah pernah supervise langsung kegiatan IT Day. IT Day adalah seminar yang diadakan bagi orang-orang yang tertarik untuk memasuki bidang IT. Tetapi, tidak menutup kemungkinan untuk orang lain untuk mengikutinya.
 
-##Pertanyaan
+## Pertanyaan Bebas
 
-Salah satu pertanyaan yang kami ajukan kepada Kak Wildan adalah hal apa yang paling tidak disukai oleh Kak Wildan yang terdfapat di dalam diri Kak Wildan sendiri. Kak Wildan menjawab bahwa ia sangat tidak menyukai sifatnya yang seringkali overthinking, seperti terlalu memikirkan kegiatan orang lain sampai bisa terdistraksi dan menjadi down.
-Kemudian, kami juga menanyakan perihal pengalaman yang paling berkesan bagi Kak Wildan. Kemudian Kak Wildan menjawab, pengalamannya yang paling berkesan adalah di saat SPARTA 2016 tepatnya di Basecamp GMKI, ia bertemu dengan seorang satpam (salah satu penjaga GMKI), lalu ia bersama kelima temannya begadang untuk menangkap malingkarena pada hari-hari sebelumnya banyak barang-barang yang hilang. Setelah itu, ia disuruh untuk berpura-pura tidur oleh satpam tersebut untuk nantinya menyergap malingnya jika datang. Tetapi ternyata maling tersebut tidak datang.
+    Salah satu pertanyaan yang kami ajukan kepada Kak Wildan adalah hal apa yang paling tidak disukai oleh Kak Wildan yang terdfapat di dalam diri Kak Wildan sendiri. Kak Wildan menjawab bahwa ia sangat tidak menyukai sifatnya yang seringkali overthinking, seperti terlalu memikirkan kegiatan orang lain sampai bisa terdistraksi dan menjadi down.
+    Kemudian, kami juga menanyakan perihal pengalaman yang paling berkesan bagi Kak Wildan selama SPARTA. Menurutnya, pengalaman yang paling berkesan adalah di saat SPARTA 2016 tepatnya di Basecamp GMKI, ia bertemu dengan seorang satpam (salah satu penjaga GMKI), lalu ia bersama kelima temannya begadang untuk menangkap maling karena pada hari-hari sebelumnya banyak barang-barang yang hilang. Setelah itu, ia disuruh untuk berpura-pura tidur oleh satpam tersebut untuk nantinya menyergap malingnya jika datang. Tetapi ternyata maling tersebut tidak datang.
+    Sebagai mahasiswa Teknik Informatika yang tertarik terhadap inovasi di bidang IT, Kak Wildan memiliki pandangan khusus terhadap ide start-up yang mulai banyak bermunculan. Yang pertama ialah Eduka dimana mampu melihat market yang potensial yaitu para pelajar yang akan menjalani SBMTPN setiap tahun sehingga market tersebut hanya berpeluang kecil untuk lesu atau mati. Lalu terdapat e-Fishery dengan kesederhanaan ide yaitu memberi pakan ikan otomatis tetapi baru dan langsung cepat berkembang. Terakhir ialah UangTeman yang memiliki strategi menarik yaitu mengambil data dari HP kemudian meminta permission untuk menagih hutang sehingga muncul rasa malu ketika belum membayar. Untuk bidang fintech, kak Wildan merasa belum tahu hukum agama secara lebih lanjut seperti riba jadi belum bisa berkomentar banyak.
+    Di masa depan, Kak Wildan ingin memiliki rumah idaman dengan kriteria tertentu. Untuk mewujudkannya, ia telah melakukan survei di untuk inspirasi rumah di daerah perumahan Kanayakan yang terlihat bagus dan megah. Insentif ini muncul bersamaan ketika ia melihat rumah megah yang tertera untuk dijual di daerag SCBD seharga 128 miliar. Selain rumah, Kak Wildan juga memiliki harapan untuk membeli tanah di Palangka Raya sebagai potensi ibu kota serta investasi saham dengan lot yang banyak atau menjajal cryptocurrency.
