--- a/13516043/16518206 - 16518229 - 16518255 - 16518302 - 16518350.md
+++ b/13516043/16518206 - 16518229 - 16518255 - 16518302 - 16518350.md
@@ -11,9 +11,12 @@ Pewawancara :
 - Christovito Hidajat - 16518350
 
 ## Deskripsi
-Pada hari Jumat, 23 Agustus 2019, tepatnya pukul 20.00 di Selasar Labtek VIII Institut Teknologi Bandung, kami mendapat kesempatan untuk mewawancarai Kak Dionesius Agung Andika Perkasa, atau biasa dipanggil Kak Dion. Beliau berasal dari jurusan Teknik Informatika 2016. Kak Dion merupakan Ketua Komisi Aspirasi Dewan Perwakilan dan Pertimbangan HMIF ITB, yang bertugas mengumpulkan suara, unek-unek dari massa HMIF untuk ditindaklanjuti. Alasan beliau mengambil jabatan tersebut selain diajak ketua saat itu juga karena ingin mengubah DPP yang sebelumnya dirasa kurang jelas arahnya dan kurang memiliki "power". 
+Pada hari Jumat, 23 Agustus 2019, tepatnya pukul 20.00 di Selasar Labtek VIII Institut Teknologi Bandung, kami mendapat kesempatan untuk mewawancarai Kak Dionesius Agung Andika Perkasa, atau biasa dipanggil Kak Dion. Beliau berasal dari jurusan Teknik Informatika 2016. Kak Dion merupakan Ketua Komisi Aspirasi Dewan Perwakilan dan Pertimbangan HMIF ITB, yang bertugas mengumpulkan suara dan unek-unek dari massa HMIF untuk ditindaklanjuti. Alasan beliau mengambil jabatan tersebut selain diajak ketua saat itu juga karena ingin mengubah DPP yang sebelumnya dirasa kurang jelas arahnya dan kurang memiliki "power". 
+
 Program kerja yang dilaksanakan ada 3. Pertama yaitu forum perkembangan anggota setiap 3 bulan sekali, dengan menyebar template laporan untuk divisi-divisi Dewan Eksekutif HMIF ITB yang berfungsi untuk pengawasan anggota divisi masing-masing di Dewan Eksekutif. Kedua, angket acara untuk panitia dan peserta berupa evaluasi. Ketiga, penyebaran form divisi-divisi lain lewat Komisi Aspirasi.
 Selain itu, Kak Dion juga mengambil bagian sebagai anggota pre-event dan gala dinner Arkavidia 4.0 karena beliau kenal dengan kepala divisinya. Sedangkan di Arkavidia 5.0, Kak Dion menjadi Kepala Subdivisi Web Development Academy.
 
 ## Pertanyaan
 Pada wawancara tersebut kami berkesempatan untuk menanyakan beberapa pertanyaan kepada Kak Dion. Pertanyaan pertama yang kami ajukan adalah mengenai ketua yang ideal dan apakah beliau sudah menjadi ketua yang ideal. Menurut beliau, ketua yang ideal adalah ketua yang bisa merangkul anak-anak buahnya dan dapat menjalankan tugasnya. Jika ditanya apakah beliau sudah menjadi ketua yang ideal, jawabannya adalah belum karena ada beberapa prokernya yang belum berjalan maksimal. Pertanyaan kedua adalah kata-kata motivasi/mutiara yang menjadi prinsip hidup Kak Dion. Menurutnya, dalam mengerjakan sesuatu, jangan pernah bilang tidak bisa dahulu, belajar yang banyak supaya nantinya bisa, atau istilah kerennya adalah "Fake it till you make it".
+
+Saat wawancara, kak Dion mengenakan jaket navy berlogo Avengers sehingga kami berpikir bahwa ia setidaknya mengenali tokoh di film tersebut. Ia mengungkapkan bahwa tokoh favoritnya ialah Doctor Strange karena memiliki superpower yang terlibat dengan dunia gaib dan mistis, bukannya science atau engineering seperti Iron Man maupun Hulk. Ia juga menyukai gaya atau pembawaan Doctor Strange yang 'songong' tapi terlihat keren. Selanjutnya, kak Dion ternyata telah memiliki gambaran rumah idaman di masa depan. Kriteria utama yang dipikirkannya ialah rumah tersebut tidak boleh berhantu. Untuk fasilitas, ia menginginkan adanya tempat mainan atau playground untuk anak-anaknya, kolam renang, dan helipad. Namun ia tidak akan membangun lift serta tidak memiliki ketentuan khusus untuk memilih jenis lantai. Selain itu, ia menginginkan home theatre berupa layar dan proyektor dengan konfigurasi seat penonton hanya sebanyak 1 baris yaitu masing-masing 5 kursi di sebelah kanan dan kiri layar.
