--- a/13516065/16518132 - 16518206 - 16518229 - 16518239 - 16518255.md
+++ b/13516065/16518132 - 16518206 - 16518229 - 16518239 - 16518255.md
@@ -1,11 +1,11 @@
-Pewawancara :
-1. Muhammad Xavier Rafifsyah Prasetyo
-2. Pavita Ardhani Sugiharto Putri
-3. Madiha Ainayya Faizzati
-4. Muhammad Farid Adilazuarda
-5. Tafia Alifianty Dinita Putri
+## Pewawancara :
+1. Muhammad Xavier Rafifsyah Prasetyo - 16518132
+2. Pavita Ardhani Sugiharto Putri - 16518206
+3. Madiha Ainayya Faizzati - 16518229
+4. Muhammad Farid Adilazuarda - 16518239
+5. Tafia Alifianty Dinita Putri - 16518255
 
-Biodata Narasumber :
+## Biodata Narasumber :
 
   Pada hari Senin, 26 Agustus 2019 pukul 09.30 di selasar timur labtek v, kami bertemu dengan Kak Ahmad Faiz Sahupala. 
 Kakak IF'16 ini biasa dipanggil Kak Faiz. Ia berasal dari Ambon dan pernah bersekolah di SMAN 5 Kota Bekasi. 
@@ -21,16 +21,15 @@ bergabung dengan Technofashion karena memang sering mengikuti lomba aplikasi. Se
 juga menjadi MC pada hari-H acara. Untuk Arkavidia 5.0, Kak Faiz menjabat sebagai Sekjen. Sebagai Sekjen, ia bertugas untuk internalisasi
 dan memastikan jalur komunikasi baik. Ia menjadi Sekjen karena suka dengan visi misi ketua Arkavidia 5.0.
 
-Pertanyaan Bebas :
+## Pertanyaan Bebas :
 
   Rupanya, ada satu hal yang menurut Kak Faiz sangat bermasalah dari HMIF, yaitu budaya melepas dan tidak mau merangkul orang-orang yang
 'skip'. Menurut Kak Faiz, pendekatan yang benar untuk anak-anak yang jarang berkontribusi di tubes adalah dengan menanyai masalah mereka
-dan membantu mereka menemukan penyelesaian. Namun yang terjadi, orang-orang tersebut justru dilepas begitu saja sehingga tak jarang, orang-
-orang'skip' tersebut mengulang mata kuliah. Kak Faiz sendiri pernah bereksperimen selama masa kuliah dengan sengaja berkelompok dengan 
-orang-orang 'skip'. Menurutnya, orang-orang tersebut masih mau bekerja sama dan bisa dihubungi. Ia juga sudah merancang sistem yang
-mewajibkan orang-orang 'skip' disebar dalam setiap kelompok, sehingga mereka pun merasa dirangkul dan setidaknya bisa lulus mata kuliah
-tersebut. Sayangnya, banyak yang menolak ide Kak Faiz sehingga rancangan tersebut tidak sampai ke tahap eksekusi.
+dan membantu mereka menemukan penyelesaian. Namun yang terjadi, orang-orang tersebut justru dilepas begitu saja sehingga tak jarang, orang-orang'skip' tersebut mengulang mata kuliah. Kak Faiz sendiri pernah bereksperimen selama masa kuliah dengan sengaja berkelompok dengan orang-orang 'skip'. Menurutnya, orang-orang tersebut masih mau bekerja sama dan bisa dihubungi. Ia juga sudah merancang sistem yang mewajibkan orang-orang 'skip' disebar dalam setiap kelompok, sehingga mereka pun merasa dirangkul dan setidaknya bisa lulus mata kuliah tersebut. Sayangnya, banyak yang menolak ide Kak Faiz sehingga rancangan tersebut tidak sampai ke tahap eksekusi.
 
-  Tidak melulu soal hal-hal berbau serius, ada satu hal 'aneh' yang ingin Kak Faiz lakukan di Bandung. Hal itu adalah menghadiri pernikahan
-tanpa diundang. Ternyata saat masih SMA, Kak Faiz sudah pernah melakukan kegiatan aneh ini. Ia dan teman-temannya sengaja membawa baju
-batik, kemudian masuk ke gedung pernikahan dan ikut makan dari buffet yang disediakan. 
+  Tidak melulu soal hal-hal berbau serius, ada satu hal 'aneh' yang ingin Kak Faiz lakukan di Bandung. Hal itu adalah menghadiri pernikahan tanpa diundang. Ternyata saat masih SMA, Kak Faiz sudah pernah melakukan kegiatan aneh ini. Ia dan teman-temannya sengaja membawa baju batik, kemudian masuk ke gedung pernikahan dan ikut makan dari buffet yang disediakan. 
+
+  Di masa depan, Kak Faiz ingin memiliki rumah idaman yang sangat istimewa. Hal ini karena ia lebih memprioritaskan 'rumah' atau tempat kembali berupa istri yang solehah dan baik hati hehehe. Untuk rumah sebagai bangunan, ia tidak memiliki kriteria khusus tentang spesifikasi karena asal dengan uang banyak pun bangunan seperti apa pun akan terwujud juga sehingga bangunan tersebut bersifat dinamis. Ukuran rumah tersebut juga akan menyesuaikan dengan jumlah anggota keluarganya di masa depan sehingga bisa berubah. Untuk lingkungan rumah, ia menginginkan suasana yang tenang, bukannya di dekat jalan raya, memiliki teras yang nyaman untuk bersantai, serta dikelilingi oleh orang-orang RT dan RW yang ramah.
+  
+  Karena sudah menggeluti dunia start-up, Kak Faiz tentu menyukai idea brainstorming yang diangkat oleh para founder start up. Menurutnya, produk start up dapat dikategorikan menjadi candy yaitu 'pemanis' atau tidak memiliki dampak besar jika tidak digunakan, vitamin yaitu ide yang inovatif dan jarang sehingga lebih baik dari candy, serta pain killer yaitu memiliki dampak besar dan membawa perubahan positif. Adapun contoh inovasi yang menurutnya paling baik ialah Go-Jek karena membawa impact yang sangat baik seperti mengurangi jumlah pengangguran secara drastis. Dalam realisasi ide, saran dari kak Faiz ialah memperhatikan customer validation terlebih dahulu. Hal ini menjadi penting sebab banyak orang berlatar belakang IT langsung membuat MVP sehingga banyak produk yang gagal ketika memasuki market.
+
