--- a/13516151/16518381.md
+++ b/13516151/16518381.md
@@ -13,4 +13,13 @@ Saat ini kak Rinda sebagai Bendahara di DE HMIF 2019-2022, sebelumnya kak Rinda 
 
 ### Kenapa memutuskan ambil peran tersebut?
 
-Awalnya kak Rinda gamau jadi DE. Terus Kak Abay ngajak Kak Rinda buat jadi DE, ngeliat konsep di kepemimpinan Kak Abay yang mateng, Kak Rinda jadi tertarik buat ikut kontribusi di DE ssebagai bendaharanya.
+Awalnya kak Rinda gamau jadi DE. Terus Kak Abay ngajak Kak Rinda buat jadi DE, ngeliat konsep di kepemimpinan Kak Abay yang mateng dan punya mimpi yang bagus buat HMIF, Kak Rinda jadi tertarik buat ikut kontribusi di DE ssebagai bendaharanya.
+
+### Apa proker dari peran yang diambil?
+Di bendahara DE HMIF 2019-2022 prokernya itu ada:
+a. DanusMulus: Membuat jadwal danus kepanitiaan di HMIF agar berjalan mulus (tanpa bentrok);
+b. saRAB: Membuat RAB untuk keperluan setahun;
+c. SOPBuaH: SOP untuk departemen yang perlu mengurus hal-hal terkait keuangan;
+d. EwRun: Iuran anggota, 20.000 per semester untuk tiga tahun pertama di HMIF;
+e. LaporKakak: Laporan keuangan rutin tiap bulan melalui milis;
+f. Buset: Pembukuan keuangan himpunan.
