--- a/13516151/16518381.md
+++ b/13516151/16518381.md
@@ -1,6 +1,7 @@
 # Summary Wawancara Kak Rinda
 
 Pada hari Kamis, 22 Agustus 2019 tepatnya pukul 16.00 kami dengan nama di bawah ini bertemu dan berbincang barengn kak Rinda di selasar basdat.
+
 Widad Istiqomah - 16518381
 
 ### Siapa ya Kak Rinda?
@@ -17,9 +18,9 @@ Awalnya kak Rinda gamau jadi DE. Terus Kak Abay ngajak Kak Rinda buat jadi DE, n
 
 ### Apa proker dari peran yang diambil?
 Di bendahara DE HMIF 2019-2022 prokernya itu ada:
-a. DanusMulus: Membuat jadwal danus kepanitiaan di HMIF agar berjalan mulus (tanpa bentrok);
-b. saRAB: Membuat RAB untuk keperluan setahun;
-c. SOPBuaH: SOP untuk departemen yang perlu mengurus hal-hal terkait keuangan;
-d. EwRun: Iuran anggota, 20.000 per semester untuk tiga tahun pertama di HMIF;
-e. LaporKakak: Laporan keuangan rutin tiap bulan melalui milis;
-f. Buset: Pembukuan keuangan himpunan.
+1. DanusMulus: Membuat jadwal danus kepanitiaan di HMIF agar berjalan mulus (tanpa bentrok);
+2. saRAB: Membuat RAB untuk keperluan setahun;
+3. SOPBuaH: SOP untuk departemen yang perlu mengurus hal-hal terkait keuangan;
+4. EwRun: Iuran anggota, 20.000 per semester untuk tiga tahun pertama di HMIF;
+5. LaporKakak: Laporan keuangan rutin tiap bulan melalui milis;
+6. Buset: Pembukuan keuangan himpunan.
