--- a/13516065/16518132 - 16518206 - 16518229 - 16518239 - 16518255.md
+++ b/13516065/16518132 - 16518206 - 16518229 - 16518239 - 16518255.md
@@ -27,6 +27,8 @@ dan memastikan jalur komunikasi baik. Ia menjadi Sekjen karena suka dengan visi 
 'skip'. Menurut Kak Faiz, pendekatan yang benar untuk anak-anak yang jarang berkontribusi di tubes adalah dengan menanyai masalah mereka
 dan membantu mereka menemukan penyelesaian. Namun yang terjadi, orang-orang tersebut justru dilepas begitu saja sehingga tak jarang, orang-orang'skip' tersebut mengulang mata kuliah. Kak Faiz sendiri pernah bereksperimen selama masa kuliah dengan sengaja berkelompok dengan orang-orang 'skip'. Menurutnya, orang-orang tersebut masih mau bekerja sama dan bisa dihubungi. Ia juga sudah merancang sistem yang mewajibkan orang-orang 'skip' disebar dalam setiap kelompok, sehingga mereka pun merasa dirangkul dan setidaknya bisa lulus mata kuliah tersebut. Sayangnya, banyak yang menolak ide Kak Faiz sehingga rancangan tersebut tidak sampai ke tahap eksekusi.
 
+  Ada pula masalah yang dibahas sewaktu kami wawancara dengan Kak Faiz. Masalahnya adalah tentang anak anak HMIF yang hanya terfokus pada hal hal yang berbau keprofesian dan tidak terlalu mempedulikan apa yang terjadi di luar HMIF seperti KM ITB. Menurut Kak Faiz, hal ini terjadi karena kemudahan akses akademik bidang informatika. Kemudahan belajar dan mendapatkan informasi tentang keinformatikaan hanya menggunakan laptop membuat anak anak HMIF mudah untuk berkembang pada bidang keprofesian dan mudah pula untuk magang. Sangat jarang ada mahasiswa tingkat awal yang dapat mencari magang semudah anak anak HMIF. Hal ini membuat anak anak HMIF lebih memilih untuk berlomba lomba di bidang keprofesian daripada memikirkan hal lainnya. Namun, menurut Kak Faiz ada juga anggota HMIF yang menjadi pejabat kampus seperti PJS K3M sekarang yaitu Kak Royyan dari IF. Walaupun begitu menurut Kak Faiz ketidakpedulian mayoritas anak HMIF tidak baik dan harus diperbaiki
+
   Tidak melulu soal hal-hal berbau serius, ada satu hal 'aneh' yang ingin Kak Faiz lakukan di Bandung. Hal itu adalah menghadiri pernikahan tanpa diundang. Ternyata saat masih SMA, Kak Faiz sudah pernah melakukan kegiatan aneh ini. Ia dan teman-temannya sengaja membawa baju batik, kemudian masuk ke gedung pernikahan dan ikut makan dari buffet yang disediakan. 
 
   Di masa depan, Kak Faiz ingin memiliki rumah idaman yang sangat istimewa. Hal ini karena ia lebih memprioritaskan 'rumah' atau tempat kembali berupa istri yang solehah dan baik hati hehehe. Untuk rumah sebagai bangunan, ia tidak memiliki kriteria khusus tentang spesifikasi karena asal dengan uang banyak pun bangunan seperti apa pun akan terwujud juga sehingga bangunan tersebut bersifat dinamis. Ukuran rumah tersebut juga akan menyesuaikan dengan jumlah anggota keluarganya di masa depan sehingga bisa berubah. Untuk lingkungan rumah, ia menginginkan suasana yang tenang, bukannya di dekat jalan raya, memiliki teras yang nyaman untuk bersantai, serta dikelilingi oleh orang-orang RT dan RW yang ramah.
