--- a/13516012/16518206 - 16518229 - 16518255 - 16518302 - 16518350.md
+++ b/13516012/16518206 - 16518229 - 16518255 - 16518302 - 16518350.md
@@ -20,10 +20,14 @@ Pewawancara:
 
 ## Pertanyaan Bebas
 
-  Salah satu pertanyaan yang kami ajukan kepada Kak Wildan adalah hal apa yang paling tidak disukai oleh Kak Wildan yang terdfapat di dalam diri Kak Wildan sendiri. Kak Wildan menjawab bahwa ia sangat tidak menyukai sifatnya yang seringkali overthinking, seperti terlalu memikirkan kegiatan orang lain sampai bisa terdistraksi dan menjadi down.
+  Salah satu pertanyaan yang kami ajukan kepada Kak Wildan adalah hal apa yang paling tidak disukai oleh Kak Wildan yang terdapat di dalam diri Kak Wildan sendiri. Kak Wildan menjawab bahwa ia sangat tidak menyukai sifatnya yang seringkali overthinking, seperti terlalu memikirkan kegiatan orang lain sampai bisa terdistraksi dan menjadi down.
   
   Kemudian, kami juga menanyakan perihal pengalaman yang paling berkesan bagi Kak Wildan selama SPARTA. Menurutnya, pengalaman yang paling berkesan adalah di saat SPARTA 2016 tepatnya di Basecamp GMKI, ia bertemu dengan seorang satpam (salah satu penjaga GMKI), lalu ia bersama kelima temannya begadang untuk menangkap maling karena pada hari-hari sebelumnya banyak barang-barang yang hilang. Setelah itu, ia disuruh untuk berpura-pura tidur oleh satpam tersebut untuk nantinya menyergap malingnya jika datang. Tetapi ternyata maling tersebut tidak datang.
   
   Sebagai mahasiswa Teknik Informatika yang tertarik terhadap inovasi di bidang IT, Kak Wildan memiliki pandangan khusus terhadap ide start-up yang mulai banyak bermunculan. Yang pertama ialah Eduka dimana mampu melihat market yang potensial yaitu para pelajar yang akan menjalani SBMTPN setiap tahun sehingga market tersebut hanya berpeluang kecil untuk lesu atau mati. Lalu terdapat e-Fishery dengan kesederhanaan ide yaitu memberi pakan ikan otomatis tetapi baru dan langsung cepat berkembang. Terakhir ialah UangTeman yang memiliki strategi menarik yaitu mengambil data dari HP kemudian meminta permission untuk menagih hutang sehingga muncul rasa malu ketika belum membayar. Untuk bidang fintech, kak Wildan merasa belum tahu hukum agama secara lebih lanjut seperti riba jadi belum bisa berkomentar banyak.
   
   Di masa depan, Kak Wildan ingin memiliki rumah idaman dengan kriteria tertentu. Untuk mewujudkannya, ia telah melakukan survei di untuk inspirasi rumah di daerah perumahan Kanayakan yang terlihat bagus dan megah. Insentif ini muncul bersamaan ketika ia melihat rumah megah yang tertera untuk dijual di daerag SCBD seharga 128 miliar. Selain rumah, Kak Wildan juga memiliki harapan untuk membeli tanah di Palangka Raya sebagai potensi ibu kota serta investasi saham dengan lot yang banyak atau menjajal cryptocurrency.
+  
+  Kemudian Kak Wildan juga berkata ada beberapa hal yang pernah ia sesali untuk diikuti dalam kegiatan perkampusan di ITB ini. Menurut Kak Wildan, ketika banyak orang yang berfokus pada satu dan dua hal tertentu di kegiatan terpusat kampus, ada beberapa orang yang berfokus pada keprofesian dan keahlian semisalkan mengikuti berbagai komunitas, forum, kajian, ahkan magang sekalipun di Bandung ini. Jadi walaupun memang kembali ke orang itu masing masing, dan bergantung pada preferensi orang itu masing masing, tapi Kak Wildan sempat menyesal ia tidak berfokus pada bidang IT atau keprofesian dengan mengikuti berbagai kegiatan keprofesian secara lebih awal dan cenderung memilih kegiatan itu dibandingkan dengan berbagai kegiatan terpusat di kampus.
+  
+  Tentu bisa dibilang kehidupan Kak Wildan di ITB kampus tercinta kita ini sudah cukup lama, apalagi dibandingkan dengan kami. Sehingga
