--- a/13516065/16518132 - 16518206 - 16518229 - 16518239 - 16518255.md
+++ b/13516065/16518132 - 16518206 - 16518229 - 16518239 - 16518255.md
@@ -1,3 +1,6 @@
+# Foto
+![foto](./foto-16518132 -16518206 -16518229-16518239-16518255.jpg)
+
 ## Pewawancara :
 1. Muhammad Xavier Rafifsyah Prasetyo - 16518132
 2. Pavita Ardhani Sugiharto Putri - 16518206
