--- a/13516065/16518132 - 16518206 - 16518229 - 16518239 - 16518255.md
+++ b/13516065/16518132 - 16518206 - 16518229 - 16518239 - 16518255.md
@@ -1,5 +1,5 @@
 # Foto
-13516065/foto-16518132 -16518206 -16518229-16518239-16518255.jpg
+![alt text](./foto-16518147-16518289-16518305-16518310-16518348.jpg)
 
 ## Pewawancara :
 1. Muhammad Xavier Rafifsyah Prasetyo - 16518132
