--- a/13516012/16518206 - 16518229 - 16518255 - 16518302 - 16518350.md
+++ b/13516012/16518206 - 16518229 - 16518255 - 16518302 - 16518350.md
@@ -30,4 +30,4 @@ Pewawancara:
   
   Kemudian Kak Wildan juga berkata ada beberapa hal yang pernah ia sesali untuk diikuti dalam kegiatan perkampusan di ITB ini. Menurut Kak Wildan, ketika banyak orang yang berfokus pada satu dan dua hal tertentu di kegiatan terpusat kampus, ada beberapa orang yang berfokus pada keprofesian dan keahlian semisalkan mengikuti berbagai komunitas, forum, kajian, ahkan magang sekalipun di Bandung ini. Jadi walaupun memang kembali ke orang itu masing masing, dan bergantung pada preferensi orang itu masing masing, tapi Kak Wildan sempat menyesal ia tidak berfokus pada bidang IT atau keprofesian dengan mengikuti berbagai kegiatan keprofesian secara lebih awal dan cenderung memilih kegiatan itu dibandingkan dengan berbagai kegiatan terpusat di kampus.
   
-  Tentu bisa dibilang kehidupan Kak Wildan di ITB kampus tercinta kita ini sudah cukup lama, apalagi dibandingkan dengan kami. Sehingga
+  Tentu bisa dibilang kehidupan Kak Wildan di ITB kampus tercinta kita ini sudah cukup lama, apalagi dibandingkan dengan kami. Sehingga tentu waktu yang Kak Wildan sudah miliki untuk melihat daerah sekitar ITB juga sudah banyak pula. Banyak sekali pohon indah dan bagus serta ciamik di ITB kampus kita ini sehingga Kak Wildan kesulitan untuk memilih pohon apa yang terindah di ITB ini, karena memang sangat variatif dan mungkin, bahkan bagi kami sendiri sebagai penanya, pun sulit untuk memilih.
