tambah pertanyaan random jori dan ubah nama

--- a/13516151/16518301 - 16518302 - 16518350 - 16518381 - 16518399.md
+++ b/13516151/16518301 - 16518302 - 16518350 - 16518381 - 16518399.md
@@ -49,7 +49,7 @@ Dulu, waktu jadi panitia, Kak Rinda disuruh ngajarin PBB karena anak MBWG. Tapi,
 Belum, masih banyak yang kurang. Jujur bahkan aku baru sekarang benar-benar merasakan bahwa aku bisa ngoding dan istilahnya 'jago' dalam ngoding gitu, baru di tingkat 4 ini sekarang. Ada banyak wadah di luar sana yang bisa ngebantu dalam belajar ngoding, jadi jangan mengandalkan apa yang ada di ITB saja.
 
 ### Menurut kakak, kenapa anak IF dan STI sulit untuk berkomunikasi?
-Emang iya ya? Mungkin bisa dibilang iya, terutama mungkin di IF. TERUS?
+Emang iya ya? Mungkin bisa dibilang iya, terutama mungkin di IF. Karena bisa saja sedari dulu lingkungan di tempat mereka berada itu mungkin cenderung tidak seterbuka lingkungan mereka sekarang di kampus ITB jadi mereka perlu waktu untuk adaptasi. Bisa juga mungkin karena mereka tidak terbiasa dengan tekanan yang ada di lingkungan mereka, jadi mereka memilih untuk bertindak 'aman'.
 
 ### Kak apa tips-tips supaya kita aktif berorganisasi atau istilahnya "tidak mager"?
 Inget aja kita punya tanggung jawab lebih di organisasi tersebut, selain itu karena teman-teman Kak Rinda juga aktif berorganisasi
