Update jawaban pertanyaan harapan buat lulusan IT

--- a/13516065/16518132 - 16518206 - 16518229 - 16518239 - 16518255.md
+++ b/13516065/16518132 - 16518206 - 16518229 - 16518239 - 16518255.md
@@ -37,4 +37,6 @@ dan membantu mereka menemukan penyelesaian. Namun yang terjadi, orang-orang ters
   Di masa depan, Kak Faiz ingin memiliki rumah idaman yang sangat istimewa. Hal ini karena ia lebih memprioritaskan 'rumah' atau tempat kembali berupa istri yang solehah dan baik hati hehehe. Untuk rumah sebagai bangunan, ia tidak memiliki kriteria khusus tentang spesifikasi karena asal dengan uang banyak pun bangunan seperti apa pun akan terwujud juga sehingga bangunan tersebut bersifat dinamis. Ukuran rumah tersebut juga akan menyesuaikan dengan jumlah anggota keluarganya di masa depan sehingga bisa berubah. Untuk lingkungan rumah, ia menginginkan suasana yang tenang, bukannya di dekat jalan raya, memiliki teras yang nyaman untuk bersantai, serta dikelilingi oleh orang-orang RT dan RW yang ramah.
   
   Karena sudah menggeluti dunia start-up, Kak Faiz tentu menyukai idea brainstorming yang diangkat oleh para founder start up. Menurutnya, produk start up dapat dikategorikan menjadi candy yaitu 'pemanis' atau tidak memiliki dampak besar jika tidak digunakan, vitamin yaitu ide yang inovatif dan jarang sehingga lebih baik dari candy, serta pain killer yaitu memiliki dampak besar dan membawa perubahan positif. Adapun contoh inovasi yang menurutnya paling baik ialah Go-Jek karena membawa impact yang sangat baik seperti mengurangi jumlah pengangguran secara drastis. Dalam realisasi ide, saran dari kak Faiz ialah memperhatikan customer validation terlebih dahulu. Hal ini menjadi penting sebab banyak orang berlatar belakang IT langsung membuat MVP sehingga banyak produk yang gagal ketika memasuki market.
+  
+    Dari pengalaman Kak Faiz magang, aktif himpunan, kerja praktik, bahkan mendirikan start-up, menurut Kak Faiz hal yang paling diperlukan dan diharapkan dari seorang sarjana informatika adalah skill komunikasi dan loyalitas. Karena dari pengalaman Kak Faiz sejauh ini, yang banyak dikeluhkan dari seorang sarjana ITB adalah kurangnya skill komunikasi dan dianggap sering berpindah pindah perusahaan atau menjadi kutu loncat
 
