--- a/13516043/16518206 - 16518229 - 16518255 - 16518302 - 16518350.md
+++ b/13516043/16518206 - 16518229 - 16518255 - 16518302 - 16518350.md
@@ -20,3 +20,5 @@ Selain itu, Kak Dion juga mengambil bagian sebagai anggota pre-event dan gala di
 Pada wawancara tersebut kami berkesempatan untuk menanyakan beberapa pertanyaan kepada Kak Dion. Pertanyaan pertama yang kami ajukan adalah mengenai ketua yang ideal dan apakah beliau sudah menjadi ketua yang ideal. Menurut beliau, ketua yang ideal adalah ketua yang bisa merangkul anak-anak buahnya dan dapat menjalankan tugasnya. Jika ditanya apakah beliau sudah menjadi ketua yang ideal, jawabannya adalah belum karena ada beberapa prokernya yang belum berjalan maksimal. Pertanyaan kedua adalah kata-kata motivasi/mutiara yang menjadi prinsip hidup Kak Dion. Menurutnya, dalam mengerjakan sesuatu, jangan pernah bilang tidak bisa dahulu, belajar yang banyak supaya nantinya bisa, atau istilah kerennya adalah "Fake it till you make it".
 
 Saat wawancara, kak Dion mengenakan jaket navy berlogo Avengers sehingga kami berpikir bahwa ia setidaknya mengenali tokoh di film tersebut. Ia mengungkapkan bahwa tokoh favoritnya ialah Doctor Strange karena memiliki superpower yang terlibat dengan dunia gaib dan mistis, bukannya science atau engineering seperti Iron Man maupun Hulk. Ia juga menyukai gaya atau pembawaan Doctor Strange yang 'songong' tapi terlihat keren. Selanjutnya, kak Dion ternyata telah memiliki gambaran rumah idaman di masa depan. Kriteria utama yang dipikirkannya ialah rumah tersebut tidak boleh berhantu. Untuk fasilitas, ia menginginkan adanya tempat mainan atau playground untuk anak-anaknya, kolam renang, dan helipad. Namun ia tidak akan membangun lift serta tidak memiliki ketentuan khusus untuk memilih jenis lantai. Selain itu, ia menginginkan home theatre berupa layar dan proyektor dengan konfigurasi seat penonton hanya sebanyak 1 baris yaitu masing-masing 5 kursi di sebelah kanan dan kiri layar.
+
+Tentu pengalaman Kak Dion dalam berkuliah di ITB sudah sangat banyak dan tentu pengalaman - pengalaman itu tidaklah hanya berputar di ranah akademik dan perlombaan yang sangat banyak dilakukannya. Tentu pengalaman lain yang lebih ke arah sehari - hari juga banyak, misalkan seperti pengalaman mistis dan menyeramkan pun pernah ia alami. Ia bercerita bahwa suatu saat pernah ia 
