--- a/13516051/16518166-16518mirza-16518tiara-16518devin-165182ziad.md
+++ b/13516051/16518166-16518mirza-16518tiara-16518devin-165182ziad.md
@@ -7,7 +7,7 @@ Pada hari Jumat, 23 Agustus 2019 pukul 13.00, kami,
 - 16518 -
 - 16518166 - Ahadi Ihsan Rasyidin
 - 16518 -
-- 16518 -
+- 16518359 - Valentinus Devin Setiadi
 
 mewawancarai kak Luthfi yang menggunakan nama sandi 'twofish'.
 ## Pertanyaan-pertanyaan formal
@@ -22,7 +22,7 @@ Teknik Informatika
 
 **Perannya di DE / DPP / Senator / Arkavidia apa?**
 
-Kadep Eksternal (Vice Presdent of External Affair)
+Kadep Eksternal (Vice Presdent of External Affair) dan IT Fest di Arkavidia
 
 **Kenapa mau memegang peran tersebut?**
 
@@ -40,6 +40,13 @@ Menurut Kak Luthfi kaderisasi itu perlu tapi tidak perlu akting berlebihan oleh 
 **Pengalaman waktu SPARTA atau di HMIF?**
 Menurut kak Luthfi SPARTA itu asik banget, bisa ngumpul bareng temen. Momen yang menyenangkan sebelum tugas berdatangan. Di SPARTA juga bisa lebih kenal sama temen-temen. Paling berkesan waktu SPARTA akhir saat pelantikan, dia kena karma dan akhirnya muncul meme upi.
 di HMIF paling berkesan menurut kak Luthfi ketika dia menjabat sebagai ketua Pemira HMIF. itu pertama kalinya dia jadi ketua. Saat itu membuat dia sadar atas kekurangannya dan berusaha menjadikan pembelajaran saat sekarang dia menjabat sebagai Kadep Eksternal.
+
+**HMIF di mata kaka**
+Menurut kak Upi ini HMIF merupakan tempat/wadah yang bisa dipakai untuk anggotanya untuk bercengkrama. Ada pun alasan yang dilontarkan oleh ka Upi ini, HMIF merupakan tempat satu-satu nya yang membuat dia bisa berkenalan dengan banyak orang, berkumpul, mengembangkan soft skill dan hard skill, serta main dan belajar.
+
+**Pandangan kepada Decrypt 2018**
+Ka Upi ini awalnya mengira anak - anak decrypt 2018 itu baik - baik aja dan bagus - bagus aja, tetapi semakin sini menjadi berbeda. Terutama pada saat forum 2 arah, anak - anak decrypt selalu mengkritisi setiap konsekuensi pada SPARTA ini tetapi tidak mencari solusi yang solutif.
+
 
 ## Hal-hal lain yang dibahas saat wawancara
 
