--- a/13516065/16518132 - 16518206 - 16518229 - 16518239 - 16518255.md
+++ b/13516065/16518132 - 16518206 - 16518229 - 16518239 - 16518255.md
@@ -1,8 +1,8 @@
-## Wawancara Daemon Kak Faiz
-# Foto
+# Wawancara Daemon Kak Faiz
+## Foto
 ![alt text](./foto-16518132-16518206-16518229-16518239-16518255.jpg)
 
-# Pewawancara 
+## Pewawancara 
 1. Muhammad Xavier Rafifsyah Prasetyo - 16518132
 2. Pavita Ardhani Sugiharto Putri - 16518206
 3. Madiha Ainayya Faizzati - 16518229
