--- a/13516043/16518206 - 16518229 - 16518255 - 16518302 - 16518350.md
+++ b/13516043/16518206 - 16518229 - 16518255 - 16518302 - 16518350.md
@@ -21,6 +21,6 @@ Pada wawancara tersebut kami berkesempatan untuk menanyakan beberapa pertanyaan 
 
 Saat wawancara, kak Dion mengenakan jaket navy berlogo Avengers sehingga kami berpikir bahwa ia setidaknya mengenali tokoh di film tersebut. Ia mengungkapkan bahwa tokoh favoritnya ialah Doctor Strange karena memiliki superpower yang terlibat dengan dunia gaib dan mistis, bukannya science atau engineering seperti Iron Man maupun Hulk. Ia juga menyukai gaya atau pembawaan Doctor Strange yang 'songong' tapi terlihat keren. Selanjutnya, kak Dion ternyata telah memiliki gambaran rumah idaman di masa depan. Kriteria utama yang dipikirkannya ialah rumah tersebut tidak boleh berhantu. Untuk fasilitas, ia menginginkan adanya tempat mainan atau playground untuk anak-anaknya, kolam renang, dan helipad. Namun ia tidak akan membangun lift serta tidak memiliki ketentuan khusus untuk memilih jenis lantai. Selain itu, ia menginginkan home theatre berupa layar dan proyektor dengan konfigurasi seat penonton hanya sebanyak 1 baris yaitu masing-masing 5 kursi di sebelah kanan dan kiri layar.
 
-Tentu pengalaman Kak Dion dalam berkuliah di ITB sudah sangat banyak dan tentu pengalaman - pengalaman itu tidaklah hanya berputar di ranah akademik dan perlombaan yang sangat banyak dilakukannya. Tentu pengalaman lain yang lebih ke arah sehari - hari juga banyak, misalkan seperti pengalaman mistis dan menyeramkan pun pernah ia alami. Ia bercerita bahwa suatu saat pernah ia sedang menginap di sekretariat unitnya, yang berletak di lantai atas salah satu labtek kembar. Disana saat ia sedang menginap dan hendak ingin tidur namun belum, saat ia sedang hanya bermain laptop, seketika seperti ada tangan yang mengetuk terus menerus di jendela hingga pintu. Kemudian ia langsung menutup matanya dan tidur.
+Tentu pengalaman Kak Dion dalam berkuliah di ITB sudah sangat banyak dan tentu pengalaman - pengalaman itu tidaklah hanya berputar di ranah akademik dan perlombaan yang sangat banyak dilakukannya. Tentu pengalaman lain yang lebih ke arah sehari - hari juga banyak, misalkan seperti pengalaman mistis dan menyeramkan pun pernah ia alami. Ia bercerita bahwa suatu saat pernah ia sedang menginap di sekretariat unitnya, yang berletak di lantai atas salah satu labtek kembar. Disana saat ia sedang menginap dan hendak ingin tidur namun belum, saat ia sedang hanya bermain laptop, seketika seperti ada tangan yang mengetuk terus menerus di jendela hingga pintu. Kemudian ia langsung menutup matanya dan tidur. Selain itu, pernah juga teman Kak Dion mendengar suara langkah kaki manusia di dalam sekre saat sedang tidur. Ketika membuka mata, ternyata di sekre tidak ada siapa-siapa.
 
-Kak Dion mengikuti UKM yang ada di ITB, seperti salah satunya URO. Dari sana dapat disimpulkan, bidang ketertarikan Kak Dion dalam dunia keinformatikaan adalah robotika, kecerdasan buatan, dan lain sebagainya. Namun selain itu, ternyata Kak Dion juga memiliki ketertarikan di bidang informatikaan yang mengarah ke arah perekonomian, akutansi, statistik, dan lain sebagainya. Sebabnya adalah prospek yang bagus di dunia profesional nanti cakapnya.
+Kak Dion mengikuti UKM yang ada di ITB, seperti salah satunya URO. Di URO sendiri, Kak Dion adalah kepala Divisi Programming tim Kontes Robot Sepak Bola Indonesia Beroda (Dagozilla). Ia aktif di URO dan sering menginap di sekre URO di labtek 8. Dari sana dapat disimpulkan, bidang ketertarikan Kak Dion dalam dunia keinformatikaan adalah robotika, kecerdasan buatan, dan lain sebagainya. Namun selain itu, ternyata Kak Dion juga memiliki ketertarikan di bidang informatikaan yang mengarah ke arah perekonomian, akutansi, statistik, dan lain sebagainya. Sebabnya adalah prospek yang bagus di dunia profesional nanti cakapnya.
