--- a/13516151/16518301 - 16518302 - 16518350 - 16518381 - 16518399.md
+++ b/13516151/16518301 - 16518302 - 16518350 - 16518381 - 16518399.md
@@ -58,4 +58,4 @@ Inget aja kita punya tanggung jawab lebih di organisasi tersebut, selain itu kar
 Kelebihan dan kekurangan Kak Rinda adalah perfeksionis. Di satu sisi, perfeksionis menghasilkan hasil kerja yang bagus dan memuaskan, tetapi di sisi lain waktu yang diperlukan untuk menyelesaikan tugas tersebut semakin lama, menimbulkan rasa tidak cepat puas dan overthinking.
 
 ### Foto bersama
-<img src="wawan.jpg" alt="drawing" width="800"/>
+<img src="wawan.jpg" alt="fotobersama" width="750"/>
