--- a/13516012/16518206 - 16518229 - 16518255 - 16518302 - 16518350.md
+++ b/13516012/16518206 - 16518229 - 16518255 - 16518302 - 16518350.md
@@ -35,3 +35,7 @@ Pewawancara:
   Ketika ditanya mengenai kriteria ketua yang baik/ideal serta apakah Kak Wildan merasa telah menjadi ketua yang ideal, Kak Wildan menjawab bahwa ketua yang baik adalah mereka yang mau melihat struktur semua data yang ada dan orang-orang di organisasi tersebut serta yang mampu mengambil keputusan yang tepat. Menurutnya, Kak Wildan belum merasa menjadi ketua yang ideal karena masih terdapat informasi-informasi yang terlewat di Inkubator IT, seperti server down HMIF dan IIT.
   
   Lalu Kak Wildan juga memberikan impresinya mengenai angkatannya serta angkatan bawahnya. Menurutnya, angkatan HMIF 2014-2015 lebih aktif dalam organisasi terpusat dan belum banyak berpartisipasi dalam magang dan lomba. Sedangkan angkatan HMIF 2015-2016 lebih aktif dalam lomba dan projek, salah satunya intern di Google. Ketika ditanya tentang angkatan UNIX, beliau mengatakan angkatan ini aware dengan organisasi terpusat dan keprofesian (magang dan lomba).
+  
+  Ketika menceritakan pengalamannya selama magang di Gojek, Kak Wildan bercerita bahwa hal paling berkesan dari momen tersebut adalah berinteraksi dengan orang banyak. Selama magang di Gojek sendiri Kak Wildan bekerja selama 1 bulan interaksi dan 2 bulan remote. Insight yang Kak Wildan dapatkan dari magang di Gojek adalah bahwa segala hal harus mengalami proses testing, sesimpel apapun hal itu. Selain itu, bagi Kak Wildan, magang adalah kegiatan yang sangat penting karena dapat melatih kita bekerja secara profesional dan dapat menghasilkan gaji sendiri.
+  
+  Ternyata, ada dosen yang cukup berkesan bagi Kak Wildan. Dosen yang pertama adalah Bu Cia. Bagi Kak Wildan, Bu Cia yang spesialisasinya basis data ini sebenarnya orang yang pintar dan ramah untuk diajak ngobrol di luar jam kuliah. Namun saat di kelas, Kak Wildan kurang menyukai metode mengajar Bu Cia. Bahasa simpelnya, kurang merasa 'sreg' dengan metodenya. Dosen yang kedua adalah Bu Fazat. Bagi Kak Wildan, Bu Fazat adalah dosen yang tegas dan strict, namun metode mengajarnya menyenangkan dan mudah dipahami.
