--- a/13516043/16518206 - 16518229 - 16518255 - 16518302 - 16518350.md
+++ b/13516043/16518206 - 16518229 - 16518255 - 16518302 - 16518350.md
@@ -24,3 +24,7 @@ Saat wawancara, kak Dion mengenakan jaket navy berlogo Avengers sehingga kami be
 Tentu pengalaman Kak Dion dalam berkuliah di ITB sudah sangat banyak dan tentu pengalaman - pengalaman itu tidaklah hanya berputar di ranah akademik dan perlombaan yang sangat banyak dilakukannya. Tentu pengalaman lain yang lebih ke arah sehari - hari juga banyak, misalkan seperti pengalaman mistis dan menyeramkan pun pernah ia alami. Ia bercerita bahwa suatu saat pernah ia sedang menginap di sekretariat unitnya, yang berletak di lantai atas salah satu labtek kembar. Disana saat ia sedang menginap dan hendak ingin tidur namun belum, saat ia sedang hanya bermain laptop, seketika seperti ada tangan yang mengetuk terus menerus di jendela hingga pintu. Kemudian ia langsung menutup matanya dan tidur. Selain itu, pernah juga teman Kak Dion mendengar suara langkah kaki manusia di dalam sekre saat sedang tidur. Ketika membuka mata, ternyata di sekre tidak ada siapa-siapa.
 
 Kak Dion mengikuti UKM yang ada di ITB, seperti salah satunya URO. Di URO sendiri, Kak Dion adalah Kepala Divisi Programming tim Kontes Robot Sepak Bola Indonesia Beroda (Dagozilla). Sebagai anggota URO, Kak Dion mengaku bahwa pada tingkat 2, prioritas utamanya masihlah akademik. Namun sejak menjadi Kepala Divisi pada tingkat 3, prioritas utamanya menjadi URO. Itulah mengapa ia sangat aktif di URO dan sering menginap di sekre URO. Banyak waktunya didedikasikan untuk ngoprek robot timnya. Dari sana dapat disimpulkan, bidang ketertarikan Kak Dion dalam dunia keinformatikaan adalah robotika, kecerdasan buatan, dan lain sebagainya. Namun selain itu, ternyata Kak Dion juga memiliki ketertarikan di bidang informatikaan yang mengarah ke arah perekonomian, akutansi, statistik, dan lain sebagainya. Sebabnya adalah prospek yang bagus di dunia profesional nanti cakapnya.
+
+Salah satu pertanyaan yang kami tanyakan adalah mengenai bagaimana perawatan rambut Kak Dion. Kak Dion menjawab jika merek shampoo yang ia kenakan saat ini adalah clear, tetapi biasanya membeli apapun yang ada di indomaret. Kak Dion juga berkata bahwa ia potong rambut paling tidak sebulan sekali dan ia juga memakai pomade saat tidak malas.
+
+Pertanyaan selanjutnya yang kami ajukan kepada Kak Dion adalah mengenai makanan yang paling dikangenin Kak Dion dari daerah asalnya yaitu Surabaya. Kak Dion berkata bahwa makanan yang paling ia rindukan adalah Bebek Sinjay dan Bebek Kantor Pos karena enak. Ketika kami menanyakan apakah Kak Dion lebih memilih Bebek Sinjay atau Kantor Pos, Kak Dion menjawab ia lebih memilih dan lebih menyukai Bebek Kantor Pos.
