--- a/13516065/16518132 - 16518206 - 16518229 - 16518239 - 16518255.md
+++ b/13516065/16518132 - 16518206 - 16518229 - 16518239 - 16518255.md
@@ -39,7 +39,7 @@ dan membantu mereka menemukan penyelesaian. Namun yang terjadi, orang-orang ters
   
   Karena sudah menggeluti dunia start-up, Kak Faiz tentu menyukai idea brainstorming yang diangkat oleh para founder start up. Menurutnya, produk start up dapat dikategorikan menjadi candy yaitu 'pemanis' atau tidak memiliki dampak besar jika tidak digunakan, vitamin yaitu ide yang inovatif dan jarang sehingga lebih baik dari candy, serta pain killer yaitu memiliki dampak besar dan membawa perubahan positif. Adapun contoh inovasi yang menurutnya paling baik ialah Go-Jek karena membawa impact yang sangat baik seperti mengurangi jumlah pengangguran secara drastis. Dalam realisasi ide, saran dari kak Faiz ialah memperhatikan customer validation terlebih dahulu. Hal ini menjadi penting sebab banyak orang berlatar belakang IT langsung membuat MVP sehingga banyak produk yang gagal ketika memasuki market.
   
-  Salah satu pertanyaan yang kami tanyakan kepada Kak Faiz adalah apa olahraga keskaan Kak Faiz dan alasannya. Kak Faiz menjawab bahwa olahraga kesukaannya adalah basket, karena ia sudah menyukai basket sejak SMA, tetapi waktu kuliah sudah jarang bermain basket lagi padahal pada waktu Kak Faiz masih SMA latihan basket di sekolahnya diadakan lima kali per minggu.
+  Salah satu pertanyaan yang kami tanyakan kepada Kak Faiz adalah apa olahraga kesukaan Kak Faiz dan alasannya. Kak Faiz menjawab bahwa olahraga kesukaannya adalah basket, karena ia sudah menyukai basket sejak SMA, tetapi waktu kuliah sudah jarang bermain basket lagi padahal pada waktu Kak Faiz masih SMA latihan basket di sekolahnya diadakan lima kali per minggu.
 
 Pertanyaan selanjutnya yang kami tanyakan adalah tempat makan favorit di Bandung. Kak Faiz menjawab tempat makan favoritnya adalah di daerah Cibadak, ia mengatakan jika semua makanan di sana enak. Jenis makanan yang banyak dijumpai di sana antara lain adalah sekoteng dan kobe. Namun, beliau juga mengingatkan kami untuk berhati-hati karena di sana banyak makanan yang mengandung babi. Kak Faiz berkata di sana juga tempatnya sangat bagus untuk foto dan harga makanannya juga cukup bersahabat.
   
