--- a/13516151/16518301 - 16518302 - 16518350 - 16518381 - 16518399.md
+++ b/13516151/16518301 - 16518302 - 16518350 - 16518381 - 16518399.md
@@ -6,7 +6,7 @@ Jingga Mutiara Windyarahma - 16518301
 Yonatan Jori Saputro - 16518302
 Christovito Hidajat - 16518350
 Widad Istiqomah - 16518381
-
+Khairunissa Rifdah - 16518399
 
 ## Pertanyaan wajib
 
