--- a/13516012/16518206 - 16518229 - 16518255 - 16518302 - 16518350.md
+++ b/13516012/16518206 - 16518229 - 16518255 - 16518302 - 16518350.md
@@ -39,3 +39,7 @@ Pewawancara:
   Ketika menceritakan pengalamannya selama magang di Gojek, Kak Wildan bercerita bahwa hal paling berkesan dari momen tersebut adalah berinteraksi dengan orang banyak. Selama magang di Gojek sendiri Kak Wildan bekerja selama 1 bulan interaksi dan 2 bulan remote. Insight yang Kak Wildan dapatkan dari magang di Gojek adalah bahwa segala hal harus mengalami proses testing, sesimpel apapun hal itu. Selain itu, bagi Kak Wildan, magang adalah kegiatan yang sangat penting karena dapat melatih kita bekerja secara profesional dan dapat menghasilkan gaji sendiri. Selain itu, ternyata Kak Wildan lumayan tertarik pada prospek kerja remote. Sebab, ada dosen yang bekerja remote untuk perusahaan di Australia dan gajinya lebih dari 100 juta rupiah perbulan. Di samping gajinya besar, kerja remote juga menyediakan fleksibilitas baik di ruang dan waktu, sehingga pekerjaan bebas dikerjakan kapanpun dan di manapun asal tidak melebihi tenggat waktu.
   
   Ternyata, ada dosen yang cukup berkesan bagi Kak Wildan. Dosen yang pertama adalah Bu Cia. Bagi Kak Wildan, Bu Cia yang spesialisasinya basis data ini sebenarnya orang yang pintar dan ramah untuk diajak ngobrol di luar jam kuliah. Namun saat di kelas, Kak Wildan kurang menyukai metode mengajar Bu Cia. Bahasa simpelnya, kurang merasa 'sreg' dengan metodenya. Dosen yang kedua adalah Bu Fazat. Bagi Kak Wildan, Bu Fazat adalah dosen yang tegas dan strict, namun metode mengajarnya menyenangkan dan mudah dipahami. Meskipun begitu, Kak Wildan setuju bahwa semua dosen pada hakikatnya pintar dan ahli di bidang masing-masing. 
+
+
+### Foto bersama
+<img src="Kak_Wildan.jpg" alt="fotobersama" width="750"/>
