--- a/13516043/16518206 - 16518229 - 16518255 - 16518302 - 16518350.md
+++ b/13516043/16518206 - 16518229 - 16518255 - 16518302 - 16518350.md
@@ -28,3 +28,6 @@ Kak Dion mengikuti UKM yang ada di ITB, seperti salah satunya URO. Di URO sendir
 Salah satu pertanyaan yang kami tanyakan adalah mengenai bagaimana perawatan rambut Kak Dion. Kak Dion menjawab jika merek shampoo yang ia kenakan saat ini adalah clear, tetapi biasanya membeli apapun yang ada di indomaret. Kak Dion juga berkata bahwa ia potong rambut paling tidak sebulan sekali dan ia juga memakai pomade saat tidak malas.
 
 Pertanyaan selanjutnya yang kami ajukan kepada Kak Dion adalah mengenai makanan yang paling dikangenin Kak Dion dari daerah asalnya yaitu Surabaya. Kak Dion berkata bahwa makanan yang paling ia rindukan adalah Bebek Sinjay dan Bebek Kantor Pos karena enak. Ketika kami menanyakan apakah Kak Dion lebih memilih Bebek Sinjay atau Kantor Pos, Kak Dion menjawab ia lebih memilih dan lebih menyukai Bebek Kantor Pos.
+
+## Foto
+13516043/S__31506439.jpg
