--- a/13516043/16518206 - 16518229 - 16518255 - 16518302 - 16518350.md
+++ b/13516043/16518206 - 16518229 - 16518255 - 16518302 - 16518350.md
@@ -30,4 +30,4 @@ Salah satu pertanyaan yang kami tanyakan adalah mengenai bagaimana perawatan ram
 Pertanyaan selanjutnya yang kami ajukan kepada Kak Dion adalah mengenai makanan yang paling dikangenin Kak Dion dari daerah asalnya yaitu Surabaya. Kak Dion berkata bahwa makanan yang paling ia rindukan adalah Bebek Sinjay dan Bebek Kantor Pos karena enak. Ketika kami menanyakan apakah Kak Dion lebih memilih Bebek Sinjay atau Kantor Pos, Kak Dion menjawab ia lebih memilih dan lebih menyukai Bebek Kantor Pos.
 
 ## Foto
-13516043/S__31506439.jpg
+<img src="Kak_Dion.jpg" alt="fotobersama" width="750"/>
